Add nav to index

--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
     <title>Arsenal Matches</title>
 </head>
 <body>
-    
+    <h1>Arsenal FC</h1>
+
+    <nav>
+        <ul>
+            <li>Home</li>
+            <li>History</li>
+            <li>Gabinet</li>
+            <li>Schedule</li>
+        </ul>
+    </nav>
 </body>
 </html>
