--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </ul>
     </nav>
 
-    <img src="ars.jpg" alt="" srcset="">
+    <img src="ars.jpg" alt="wallpaper" srcset="">
     
 </body>
 </html>
